Add new module. Add debugging. Patch for procentiles

--- a/bzt/resources/10-base-config.yml
+++ b/bzt/resources/10-base-config.yml
@@ -80,6 +80,8 @@ modules:
   # online services integrations
   blazemeter:
     class: bzt.modules.blazemeter.BlazeMeterUploader
+  signalfx:
+    class: bzt.modules.signalfx.SignalfxUploader
   cloud:
     class: bzt.modules.blazemeter.CloudProvisioning
   proxy2jmx:
